fixed loading indicator position mobile

--- a/styles.css
+++ b/styles.css
@@ -153,19 +153,22 @@ em {
 /* * loading Icon */
 .loading-container {
   position: absolute;
-  top: 40%;
-  left: 40%;
+  margin: auto;
+  top: 25%;
+  left: 5%;
+  bottom: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 150px;
+  height: 150px;
 }
 
 /* * Loading text */
 .loading {
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
 }
 .loading__letter {
   font-weight: normal;
